# servita-cluster-server

./: .gitignore  README.md  janus_integrations.md  pyproject.toml
backend/: db.sqlite3
backend/api/: admin.py  models.py  serializers.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py  0002_devicestatus_location_pinglog_location.py  0003_devicestatus_version_pinglog_version.py  0004_devicestatus_ffmpeg_pid_and_more.py  0004_devicestatus_stream_id_devicestatus_unique_stream_id.py  0005_devicestatus_unique_stream_id.py
backend/backend/: settings.py  urls.py
janus/: Dockerfile  janus.plugin.streaming.jcfg.template
scripts/: network_scanner.py  update_janus.py
setup/: setup_janus_server.sh  setup_network_scan_service.sh
vue-frontend/: package-lock.json  package.json  vue.config.js
vue-frontend/src/: App.vue  apiTools.js  main.js  routes.js
vue-frontend/src/components/: DownloadComponent.vue  FleetManagementComponent.vue  HomeComponent.vue  NavbarComponent.vue  PanelStreamsComponent.vue  PlaybackComponent.vue  SettingsComponent.vue  StreamsComponent.vue
vue-frontend/src/plugins/: vuetify.js
