[tool.poetry]
name = "ubivision-cluster-server"
version = "0.1.0"
description = ""
authors = ["TeaBear5 <tyler.bair@protonmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2"
djangorestframework = "^3.15.2"
requests = "^2.32.3"
django-livereload-server = "^0.5.1"
django-browser-reload = "^1.17.0"
django-cors-headers = "^4.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
