[tool.poetry]
name = "servita-cluster-server"
version = "0.1.0"
description = ""
authors = ["TeaBear5 <tyler.bair@protonmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2"
djangorestframework = "^3.15.2"
requests = "^2.32.3"
psutil = "^6.1.0"
django-browser-reload = "^1.18.0"
django-cors-headers = "^4.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
